--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /prepros.config
 img/foto/81998.jpg
 img/foto/246244.jpg
+js/desktop.ini
+.gitignore
+.gitignore
+css/desktop.ini
+.gitignore
+/#sourse/desktop.ini
+img/desktop.ini
+img/foto/desktop.ini
