--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 img/foto/81998.jpg
 img/foto/246244.jpg
 .gitignore
-img\foto\foto2
-img\foto\foto3
-img\foto\unknown.png
+img/foto/foto2
+img/foto/foto3
+img/foto/unknown.png
